fixed context error, align information center

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 }
 
 .App-intro {
+  text-align: center;
   font-size: large;
 }
 
